[gd_scene load_steps=4 format=3 uid="uid://duwiq20sakjq7"]

[ext_resource type="Script" uid="uid://b8ih5hi0obp3d" path="res://mobs/cameroceras.gd" id="1_co4km"]
[ext_resource type="Texture2D" uid="uid://b4vlcxpdh1n2u" path="res://sprites/TestSprites/icon.png" id="2_co4km"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fvhut"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_co4km")
metadata/_edit_group_ = true
metadata/IsFacingRight = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.23, 0.23)
texture = ExtResource("2_co4km")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-30, -30, 60, 60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_fvhut")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
